# GNM

./: .gitignore  .pylintrc  README.md  pyproject.toml
docs/: AUDIO_PRODUCTION_RESEARCH.md  CALIBRATED_MULTIVIEW.md  COMPLETION_AUDIT.md  EXPANDED_RESEARCH_AND_PLAN.md  FEASIBILITY.md  NATIVE_MACOS_PHYSICS_PLAN.md  PRODUCTION_CAPTURE_EXECUTION_PLAN.md  PRODUCTION_LIPSYNC_RESEARCH.md  PRODUCTION_READINESS.md  PRODUCTION_RESEARCH_UPDATE_2026-07-20.md  PRODUCTION_WORKFLOW.md  RESEARCH.md  SPEC.md  TEST_FIXTURES.md  VERIFICATION.md  VIEWER_RESEARCH.md
native/autoanim-physics/: Cargo.toml  README.md
native/autoanim-physics/crates/autoanim-physics-capi/: Cargo.toml
native/autoanim-physics/crates/autoanim-physics-capi/include/: autoanim_physics.h
native/autoanim-physics/crates/autoanim-physics-capi/src/: lib.rs
native/autoanim-physics/crates/autoanim-physics-core/: Cargo.toml
native/autoanim-physics/crates/autoanim-physics-core/benches/: secondary_motion.rs
native/autoanim-physics/crates/autoanim-physics-core/examples/: benchmark.rs
native/autoanim-physics/crates/autoanim-physics-core/src/: kernel.rs  lib.rs  solver.rs  topology.rs
scripts/: benchmark_physics.py  blender_body_worker.py  bootstrap.sh  bootstrap_a2f.sh  bootstrap_a2f_v3.sh  bootstrap_body_provider.py  bootstrap_viewer.sh  build_macos_app.sh  fetch_test_fixtures.sh  install_blender_body_profile.py  render_oral_diagnostic.py  run_macos_app.sh  smoke_macos_app.sh
tests/: conftest.py  test_a2f.py  test_a2f_v3_audio_import.py  test_a2f_v3_local.py  test_a2f_v3_local_pipeline.py  test_a2f_v3_postprocess.py  test_a2f_v3_profile.py  test_acting.py  test_animated_gltf.py  test_articulation_projection.py  test_audio_video_timing.py  test_audio_visual_repair.py  test_blender_body_worker.py  test_body.py  test_body_provider.py  test_body_provider_bootstrap.py  test_calibrated_retarget.py  test_camera_bundle.py  test_capture_session.py  test_character_materials.py  test_characters.py  test_gltf_export.py  test_gnm_texture.py  test_identity_qualification.py  test_lipsync_qualification.py  test_lipsync_quality.py  test_materials.py  test_mouth_aperture_correction.py  (+24 more)
(+133 files in other folders)
