[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoanim-gnm"
version = "0.1.0"
description = "Local-first GNM facial animation and single-photo fitting"
requires-python = ">=3.12,<3.14"
dependencies = [
  "absl-py==2.5.0",
  "etils==1.14.0",
  "immutabledict==4.3.1",
  "importlib-resources==7.1.0",
  "numpy==2.5.1",
  "onnxruntime==1.27.0",
  "scipy==1.18.0",
  "h5py==3.16.0",
  "mediapipe==0.10.35",
  "opencv-contrib-python==5.0.0.93",
  "pillow==12.3.0",
  "tifffile==2026.7.14",
  "fastapi==0.139.2",
  "uvicorn==0.51.0",
  "python-multipart==0.0.32",
  "rtree==1.4.1",
  "trimesh==4.12.2",
  "typeguard==4.5.2",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "httpx==0.28.1", "parameterized==0.9.0"]

[project.scripts]
autoanim-gnm = "autoanim_gnm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
